--- a/CloudFormation/s3.yaml
+++ b/CloudFormation/s3.yaml
@@ -1,11 +1,24 @@
 AWSTemplateFormatVersion: 2010-09-09
+Parameters:
+  
+  bucketName:
+    Description: name of the bucket
+    Type: String
+    Default: bucket270520210816
 
+  s3Access:
+    Description: access of the bucket
+    Type: String
+    Default: Private
+    AllowedValues: Private | PublicRead | PublicReadWrite | AuthenticatedRead | LogDeliveryWrite | BucketOwnerRead | BucketOwnerFullControl
 Resources: 
+
+
   s3Bucket:
     Type: AWS::S3::Bucket
     Properties: 
-      AccessControl: PublicRead
-      BucketName: bucket270520210816 
+      AccessControl: !Ref s3Access
+      BucketName: !Ref  bucketName
       Tags:
         - Key: Created For
           Value: CodePipelineTest
